fix text flickering after re-render

--- a/stock-front/app/globals.css
+++ b/stock-front/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-family: var(--font-inter);
+}
+
 html,
 body,
 :root {
